[COR-732] Move zal tests/tests infrastructure from zextras to openzal